grafana/deployment-grafana.yaml
# Inspired heavily by GiantSwarms Kubernetes Prometheus example
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext: # Configure the security context, so Grafana can set up folders
        runAsUser: 472
        fsGroup: 472
      containers:
      - image: grafana/grafana
        name: grafana
        resources:
          limits:
            cpu: 10m
            memory: 100Mi
          requests:
            cpu: 3m
            memory: 100Mi
        volumeMounts:
        - mountPath: "/var/lib/grafana"
          name: grafana-persistent-volume
        ports:
        - containerPort: 3000
          protocol: TCP
        # Define the readiness endpoint for the health check
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /login
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 30
      volumes:
      - emptyDir: {}
        name: grafana-persistent-volume
